{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 39,
  "lineage": "76a69f84-53ce-ff0a-c905-dc635279d481",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0631ebb48ed83c391",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0455c8e90168c7e79",
            "domain": "vpc",
            "id": "eipalloc-0631ebb48ed83c391",
            "instance": "i-046185dc6e4e5f680",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0320b94d06304b59d",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-18-225-25-188.us-east-2.compute.amazonaws.com",
            "public_ip": "18.225.25.188",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.mySingaporeIG",
            "aws_network_interface.webservernic",
            "aws_security_group.allow_web_traffic",
            "aws_subnet.singaporevpcsubnet-1",
            "aws_vpc.mySingaporeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:979064549366:instance/i-0119774acbc0b7fcf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0119774acbc0b7fcf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0320b94d06304b59d"
              }
            ],
            "primary_network_interface_id": "eni-0320b94d06304b59d",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "18.225.25.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0209aca984a0da133",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ae94e5ab7347bd2",
            "tags": {
              "Name": "Web Server"
            },
            "tags_all": {
              "Name": "Web Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e60155e23a6d466"
            ]
          },
          "dependencies": [
            "aws_network_interface.webservernic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mySingaporeIG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:979064549366:internet-gateway/igw-076132da98231e5d4",
            "id": "igw-076132da98231e5d4",
            "owner_id": "979064549366",
            "tags": {
              "Name": "SingaporeIG"
            },
            "tags_all": {
              "Name": "SingaporeIG"
            },
            "vpc_id": "vpc-04e8432b31e3d8681"
          },
          "dependencies": [
            "aws_vpc.mySingaporeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webservernic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:979064549366:network-interface/eni-0320b94d06304b59d",
            "attachment": [
              {
                "attachment_id": "eni-attach-0b226f52686e2bd53",
                "device_index": 0,
                "instance": "i-046185dc6e4e5f680"
              }
            ],
            "id": "eni-0320b94d06304b59d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:73:a2:33:c8:e6",
            "owner_id": "979064549366",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03e60155e23a6d466"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ae94e5ab7347bd2"
          },
          "dependencies": [
            "aws_subnet.singaporevpcsubnet-1",
            "aws_vpc.mySingaporeVPC",
            "aws_security_group.allow_web_traffic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "singaporeVPCRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:979064549366:route-table/rtb-0d2439ae7928fce08",
            "id": "rtb-0d2439ae7928fce08",
            "owner_id": "979064549366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-076132da98231e5d4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Singapore VPC Route Table"
            },
            "tags_all": {
              "Name": "Singapore VPC Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e8432b31e3d8681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mySingaporeIG",
            "aws_vpc.mySingaporeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnetroutetableassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064f0de255828af53",
            "route_table_id": "rtb-0d2439ae7928fce08",
            "subnet_id": "subnet-05ae94e5ab7347bd2"
          },
          "dependencies": [
            "aws_internet_gateway.mySingaporeIG",
            "aws_route_table.singaporeVPCRouteTable",
            "aws_subnet.singaporevpcsubnet-1",
            "aws_vpc.mySingaporeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:979064549366:security-group/sg-03e60155e23a6d466",
            "description": "Allow Web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e60155e23a6d466",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Traffic from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Traffic from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Traffic from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "979064549366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow Web Traffic"
            },
            "tags_all": {
              "Name": "Allow Web Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e8432b31e3d8681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mySingaporeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "singaporevpcsubnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:979064549366:subnet/subnet-05ae94e5ab7347bd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05ae94e5ab7347bd2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979064549366",
            "tags": {
              "Name": "singapore-vpc-subnet"
            },
            "tags_all": {
              "Name": "singapore-vpc-subnet"
            },
            "vpc_id": "vpc-04e8432b31e3d8681"
          },
          "dependencies": [
            "aws_vpc.mySingaporeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mySingaporeVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:979064549366:vpc/vpc-04e8432b31e3d8681",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08524beaf0e23b46a",
            "default_route_table_id": "rtb-069f159aa06fe0778",
            "default_security_group_id": "sg-0bd7f74ad718c485e",
            "dhcp_options_id": "dopt-44a1ef2f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04e8432b31e3d8681",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-069f159aa06fe0778",
            "owner_id": "979064549366",
            "tags": {
              "Name": "prodVPC"
            },
            "tags_all": {
              "Name": "prodVPC"
            }
          }
        }
      ]
    }
  ]
}